Improved font size on all screen sizes, improved hero section display on mobile, fixed known bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  @apply m-auto w-full p-6;
+  @apply m-auto w-full;
 }
 
 /* Custom styles */
@@ -32,7 +32,7 @@ body {
 }
 
 .heading__default__2 {
-  @apply text-3xl font-semibold text-gray-300;
+  @apply text-2xl font-semibold text-gray-300 md:text-3xl lg:text-4xl;
 }
 
 .heading__default_3 {
@@ -72,7 +72,7 @@ body {
 
 /* Icons */
 .icon__social {
-  @apply text-5xl font-semibold text-gray-600 hover:cursor-pointer hover:text-blue-600 dark:text-graySpecial;
+  @apply text-4xl font-semibold text-gray-600 hover:cursor-pointer hover:text-blue-600 dark:text-graySpecial md:text-5xl;
 }
 
 .icon__special {
